<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingTop="65dp"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jenis - Jenis Sampah"
                android:textColor="@color/etrash"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:padding="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="20dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/icontongsampah"/>

                    <TextView
                        android:id="@+id/header1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:textStyle="bold"
                        android:text="@string/section_1"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10"/>

                <LinearLayout
                    android:id="@+id/section1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:padding="20dp"
                        android:text="@string/item_1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="20dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/icontongsampah6"/>

                    <TextView
                        android:id="@+id/header2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:textStyle="bold"
                        android:text="@string/section_2"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_600"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10"/>

                <LinearLayout
                    android:id="@+id/section2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:padding="20dp"
                        android:text="@string/item_2"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="20dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/icontongsampah5"/>

                    <TextView
                        android:id="@+id/header3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:textStyle="bold"
                        android:text="@string/section_3"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_600"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10"/>

                <LinearLayout
                    android:id="@+id/section3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:padding="20dp"
                        android:text="@string/item_3"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="20dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/icontongsampah2"/>

                    <TextView
                        android:id="@+id/header4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:textStyle="bold"
                        android:text="@string/section_4"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_600"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10"/>

                <LinearLayout
                    android:id="@+id/section4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:padding="20dp"
                        android:text="@string/item_4"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="20dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/icontongsampah4"/>

                    <TextView
                        android:id="@+id/header5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:textStyle="bold"
                        android:text="@string/section_5"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_600"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10"/>

                <LinearLayout
                    android:id="@+id/section5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:padding="20dp"
                        android:text="@string/item_5"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="5dp"
                        android:paddingLeft="20dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/icontongsampah3"/>

                    <TextView
                        android:id="@+id/header6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:textStyle="bold"
                        android:text="@string/section_6"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_600"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10"/>

                <LinearLayout
                    android:id="@+id/section6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?android:attr/listPreferredItemHeight"
                        android:padding="20dp"
                        android:text="@string/item_6"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>